@@ -1,3 +1,10 @@
+1998-01-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Makefile.conf (TCLVERS): Change to use Tcl 7.6, Tk 4.2,
+	BLT 2.3, and tclobjc-1.2.
+
+	* Makefile (SWARMDIST): Bump to 1.0.5.
+
 1998-01-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile.lib ($(INCFILE)):  Fix typo.
